# sol

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_option_type_for_fo.py  b1c2d3e4f5a6_add_sl_tp_order_ids_to_positions.py  f5493e750715_initial.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: deploy.sh  seed_instruments.py  setup.sh
sol/: config.py  database.py  main.py
sol/agents/: agent_manager.py  base_agent.py  claude_agent.py  gemini_agent.py  gpt_agent.py
sol/api/: agents.py  auth.py  chat.py  dashboard.py  news.py  options.py  portfolio.py  risk.py  router.py  settings.py  strategies.py  trades.py
sol/broker/: kite_client.py  order_manager.py  paper_broker.py  price_store.py
sol/core/: agent_feedback.py  cycle_runner.py  event_bus.py  market_regime.py  orchestrator.py  position_monitor.py  risk_engine.py  scheduler.py  strategy_executor.py  trading_mode.py
sol/models/: __init__.py  agent.py  device_auth.py  position.py  risk_config.py  session.py  strategy.py  trade.py
sol/notifications/: whatsapp.py
sol/schemas/: agent.py  risk.py  strategy.py  trade.py
sol/services/: backtest_service.py  eod_reporter.py  market_data_service.py  news_service.py  option_chain_service.py  position_monitor.py  proposal_service.py  risk_service.py  strategy_service.py
sol/utils/: encryption.py  retry.py  (+1 more)
tests/: conftest.py
(+27 files in other folders)
